# LS_2kT

./: CMakeLists.txt  vis.mac
source/: LS_2kTDetectorConstruction.cc
